--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@twilio/runtime-handler": "1.3.0",
     "firebase-admin": "^11.8.0",
+    "fs": "^0.0.1-security",
     "openai": "^3.2.1",
     "twilio": "^3.56"
   },
