--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,4 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-/Assets/twilio-openai-d6a44-firebase-adminsdk-vde5o-1cefa4723e.json
+./assets/firebase-chatgpt-key.json
